updated the path

--- a/Petrol Calculator/index.html
+++ b/Petrol Calculator/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petrol Calculator</title>
     <!--Linking to CSS file from a folder-->
-    <link rel="stylesheet" href="/Petrol Calculator/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -40,5 +40,5 @@
     <footer> &copy; Made by Mohamed Shakin</footer>
 </body>
 <!--Linking to JavaScript file from a folder-->
-<script src="/Petrol Calculator/index.js"></script>
+<script src="./index.js"></script>
 </html>
