--- a/Soundboard/index.html
+++ b/Soundboard/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soundboard</title>
     <!--Linking to CSS file from a folder-->
-    <link rel="stylesheet" href="/Soundboard/style.css">
+    <link rel="stylesheet" href=".style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                     <button onclick="aha()">
                         <!--When the button is clicked, aha() function will be called and execute its function-->
                         <span class='number'>1.</span>
-                        <audio src="/Soundboard/Media/ah-ha.mp3"
+                        <audio src=".Media/ah-ha.mp3"
                             id="sound1" controls></audio>
                         <p class="name">Ah-ha</p>
                         <span>1.4</span>
@@ -53,7 +53,7 @@
                     <button onclick="dan()">
                         <!--When the button is clicked, dan() function will be called and execute its function-->
                         <span class='number'>2.</span>
-                        <audio src="/Soundboard/Media/dan.mp3"
+                        <audio src="./Media/dan.mp3"
                             id="sound2" controls></audio>
                         <p class="name">Dan</p>
                         <span>0.5</span>
@@ -66,7 +66,7 @@
                         <!--When the button is clicked, back() function will be called and execute its function-->
                         <span class='number'>3.</span>
                         <audio
-                            src="/Soundboard/Media/back-of-the-net.mp3"
+                            src="./Media/back-of-the-net.mp3"
                             id="sound3" controls></audio>
                         <p class="name">Back of the net</p>
                         <span>1.02</span>
@@ -79,7 +79,7 @@
                         <!--When the button is clicked, bang() function will be called and execute its function-->
                         <span class='number'>4.</span>
                         <audio
-                            src="/Soundboard/Media/bangoutoforder.mp3"
+                            src="./Media/bangoutoforder.mp3"
                             id="sound4" controls></audio>
                         <p class="name">Bang out of order</p>
                         <span>1.38</span>
@@ -92,7 +92,7 @@
                         <!--When the button is clicked, email() function will be called and execute its function-->
                         <span class='number'>5.</span>
                         <audio
-                            src="/Soundboard/Media/emailoftheevening.mp3"
+                            src="./Media/emailoftheevening.mp3"
                             id="sound5" controls></audio>
                         <p class="name">Email of the Evening</p>
                         <span>1.49</span>
@@ -105,7 +105,7 @@
                         <!--When the button is clicked, egg() function will be called and execute its function-->
                         <span class='number'>6.</span>
                         <audio
-                            src="/Soundboard/Media/iateascotchegg.mp3"
+                            src="./Media/iateascotchegg.mp3"
                             id="sound6" controls></audio>
                         <p class="name">I Ate a Scotch Egg</p>
                         <span>1.91</span>
@@ -118,7 +118,7 @@
                         <!--When the button is clicked, confused() function will be called and execute its function-->
                         <span class='number'>7.</span>
                         <audio
-                            src="/Soundboard/Media/imconfused.mp3"
+                            src="./Media/imconfused.mp3"
                             id="sound7" controls></audio>
                         <p class="name">I'm Confused</p>
                         <span>1.07</span>
@@ -131,7 +131,7 @@
                         <!--When the button is clicked, hello() function will be called and execute its function-->
                         <span class='number'>8.</span>
                         <audio
-                            src="/Soundboard/Media/hellopartridge.mp3"
+                            src="./Media/hellopartridge.mp3"
                             id="sound8" controls></audio>
                         <p class="name">Hello Partridge</p>
                         <span>2.25</span>
@@ -144,7 +144,7 @@
                         <!--When the button is clicked, mystery() function will be called and execute its function-->
                         <span class='number'>9.</span>
                         <audio
-                            src="/Soundboard/Media/Mystery-sound-effect.mp3"
+                            src="./Media/Mystery-sound-effect.mp3"
                             id="sound9" controls></audio>
                         <p class="name">Mystery</p>
                         <span>9.00</span>
@@ -156,6 +156,6 @@
 
 </body>
 <!--Linking to JavaScript file from a folder-->
-<script src="/Soundboard/index.js"></script>
+<script src=".index.js"></script>
 
 </html>
