updated the path

--- a/Soundboard/index.html
+++ b/Soundboard/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soundboard</title>
     <!--Linking to CSS file from a folder-->
-    <link rel="stylesheet" href=".style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                     <button onclick="aha()">
                         <!--When the button is clicked, aha() function will be called and execute its function-->
                         <span class='number'>1.</span>
-                        <audio src=".Media/ah-ha.mp3"
+                        <audio src="./Media/ah-ha.mp3"
                             id="sound1" controls></audio>
                         <p class="name">Ah-ha</p>
                         <span>1.4</span>
@@ -156,6 +156,6 @@
 
 </body>
 <!--Linking to JavaScript file from a folder-->
-<script src=".index.js"></script>
+<script src="./index.js"></script>
 
 </html>
